refactor: harden cultivation and runtime services